@@ -1,3 +1,14 @@
+2006-08-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
+
+	* support.h, providerDrv.c, providerMgr.c, msgqueue.c: 
+	Fixed 1548673: Reworked handling of MSG_SEG_CHAR segments. Now the
+	necessary padding will occur only when needed, i.e. when copied
+	to a request buffer.
+
+	* objectImpl.c:
+	Fixed 1548673: Fixed string and array buffer expansion logic.
+	Also removes a memory leak.
+
 2006-07-31  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
 	* support.c, httpAdapter.c, providerDrv.c: 
